crates/proto-flow/tests/snapshots/regression__collection_spec_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a116163 6d65436f 2f636f6c 6c656374| ..acmeCo/collect 00000000
|696f6e1a 082f6b65 792f6f6e 651a082f| ion../key/one../ 00000010
|6b65792f 74776f22 0b2f5f6d 6574612f| key/two"./_meta/ 00000020
|75756964 2a047479 70652a06 72656769| uuid*.type*.regi 00000030
|6f6e32c0 010a092f 6a736f6e 2f707472| on2..../json/ptr 00000040
|1207612d 6669656c 64200132 a7010a07| ..a-field .2.... 00000050
|696e7465 6765720a 06737472 696e671a| integer..string. 00000060
|2e1a0374 79702204 64617465 30b9603a| ...typ".date0.`: 00000070
|03656e63 42033130 304a1431 38343436| .encB.100J.18446 00000080
|37343430 37333730 39353531 36313522| 744073709551615" 00000090
|05746974 6c652a04 64657363 320e7b22| .title*.desc2.{" 000000a0
|64656622 3a226175 6c74227d 40014a0b| def":"ault"}@.J. 000000b0
|08011100 00000000 408fc052 15080a10| ........@..R.... 000000c0
|01181422 046e756c 6c220769 6e746567| ...".null".integ 000000d0
|65725a0b 22636f6e 73742d6f 6e65225a| erZ."const-one"Z 000000e0
|0b22636f 6e73742d 74776f22 60066803| ."const-two"`.h. 000000f0
|72037479 703a0e7b 2261636b 223a2274| r.typ:.{"ack":"t 00000100
|72756522 7d42127b 22777269 7465223a| rue"}B.{"write": 00000110
|22736368 656d6122 7d4aa301 0a127061| "schema"}J....pa 00000120
|72746974 696f6e2f 74656d70 6c617465| rtition/template 00000130
|10031a40 0a1e0a0f 65737475 6172792e| ...@....estuary. 00000140
|6465762f 666f6f12 0b6c6162 656c2d76| dev/foo..label-v 00000150
|616c7565 0a1e0a0f 65737475 6172792e| alue....estuary. 00000160
|6465762f 62617212 0b6f7468 65722d76| dev/bar..other-v 00000170
|616c7565 224208e9 ec061003 1a127333| alue"B........s3 00000180
|3a2f2f62 75636b65 742f7072 65666978| ://bucket/prefix 00000190
|220308ac 02320708 3e1080e5 9a773a18| "....2..>....w:. 000001a0
|50617468 7b7b506f 73746669 782e5465| Path{{Postfix.Te 000001b0
|6d706c61 74657d7d 300438cf b0f5015a| mplate}}0.8....Z 000001c0
|117b2272 65616422 3a227363 68656d61| .{"read":"schema 000001d0
|227d|                                "}               000001e0
                                                       000001e2
