crates/proto-flow/tests/snapshots/regression__connector_response_json.snap
---
source: crates/proto-flow/tests/regression.rs
expression: json_test(ex_connector_response())
---
{
  "started": {
    "codec": "PROTO",
    "execution": {
      "vmm": true
    },
    "derive": {}
  }
}
