crates/proto-flow/tests/snapshots/regression__connector_response_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(ex_connector_response())
---
|0a081001 32004202 0801|              ....2.B...       00000000
                                                       0000000a
