crates/proto-flow/tests/snapshots/regression__derivation_spec_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a116163 6d65436f 2f636f6c 6c656374| ..acmeCo/collect 00000000
|696f6e1a 082f6b65 792f6f6e 651a082f| ion../key/one../ 00000010
|6b65792f 74776f22 0b2f5f6d 6574612f| key/two"./_meta/ 00000020
|75756964 2a047479 70652a06 72656769| uuid*.type*.regi 00000030
|6f6e32c0 010a092f 6a736f6e 2f707472| on2..../json/ptr 00000040
|1207612d 6669656c 64200132 a7010a07| ..a-field .2.... 00000050
|696e7465 6765720a 06737472 696e671a| integer..string. 00000060
|2e1a0374 79702204 64617465 30b9603a| ...typ".date0.`: 00000070
|03656e63 42033130 304a1431 38343436| .encB.100J.18446 00000080
|37343430 37333730 39353531 36313522| 744073709551615" 00000090
|05746974 6c652a04 64657363 320e7b22| .title*.desc2.{" 000000a0
|64656622 3a226175 6c74227d 40014a0b| def":"ault"}@.J. 000000b0
|08011100 00000000 408fc052 15080a10| ........@..R.... 000000c0
|01181422 046e756c 6c220769 6e746567| ...".null".integ 000000d0
|65725a0b 22636f6e 73742d6f 6e65225a| erZ."const-one"Z 000000e0
|0b22636f 6e73742d 74776f22 60066803| ."const-two"`.h. 000000f0
|72037479 703a0e7b 2261636b 223a2274| r.typ:.{"ack":"t 00000100
|72756522 7d42127b 22777269 7465223a| rue"}B.{"write": 00000110
|22736368 656d6122 7d4aa301 0a127061| "schema"}J....pa 00000120
|72746974 696f6e2f 74656d70 6c617465| rtition/template 00000130
|10031a40 0a1e0a0f 65737475 6172792e| ...@....estuary. 00000140
|6465762f 666f6f12 0b6c6162 656c2d76| dev/foo..label-v 00000150
|616c7565 0a1e0a0f 65737475 6172792e| alue....estuary. 00000160
|6465762f 62617212 0b6f7468 65722d76| dev/bar..other-v 00000170
|616c7565 224208e9 ec061003 1a127333| alue"B........s3 00000180
|3a2f2f62 75636b65 742f7072 65666978| ://bucket/prefix 00000190
|220308ac 02320708 3e1080e5 9a773a18| "....2..>....w:. 000001a0
|50617468 7b7b506f 73746669 782e5465| Path{{Postfix.Te 000001b0
|6d706c61 74657d7d 300438cf b0f5015a| mplate}}0.8....Z 000001c0
|117b2272 65616422 3a227363 68656d61| .{"read":"schema 000001d0
|227d62b5 08080112 1c7b2264 65726976| "}b......{"deriv 000001e0
|6174696f 6e223a7b 22636f6e 66696722| ation":{"config" 000001f0
|3a34327d 7d1ae305 0a0e7472 616e7366| :42}}.....transf 00000200
|6f726d5f 6e616d65 12e2030a 1161636d| orm_name.....acm 00000210
|65436f2f 636f6c6c 65637469 6f6e1a08| eCo/collection.. 00000220
|2f6b6579 2f6f6e65 1a082f6b 65792f74| /key/one../key/t 00000230
|776f220b 2f5f6d65 74612f75 7569642a| wo"./_meta/uuid* 00000240
|04747970 652a0672 6567696f 6e32c001| .type*.region2.. 00000250
|0a092f6a 736f6e2f 70747212 07612d66| ../json/ptr..a-f 00000260
|69656c64 200132a7 010a0769 6e746567| ield .2....integ 00000270
|65720a06 73747269 6e671a2e 1a037479| er..string....ty 00000280
|70220464 61746530 b9603a03 656e6342| p".date0.`:.encB 00000290
|03313030 4a143138 34343637 34343037| .100J.1844674407 000002a0
|33373039 35353136 31352205 7469746c| 3709551615".titl 000002b0
|652a0464 65736332 0e7b2264 6566223a| e*.desc2.{"def": 000002c0
|2261756c 74227d40 014a0b08 01110000| "ault"}@.J...... 000002d0
|00000040 8fc05215 080a1001 18142204| ...@..R.......". 000002e0
|6e756c6c 2207696e 74656765 725a0b22| null".integerZ." 000002f0
|636f6e73 742d6f6e 65225a0b 22636f6e| const-one"Z."con 00000300
|73742d74 776f2260 06680372 03747970| st-two"`.h.r.typ 00000310
|3a0e7b22 61636b22 3a227472 7565227d| :.{"ack":"true"} 00000320
|42127b22 77726974 65223a22 73636865| B.{"write":"sche 00000330
|6d61227d 4aa3010a 12706172 74697469| ma"}J....partiti 00000340
|6f6e2f74 656d706c 61746510 031a400a| on/template...@. 00000350
|1e0a0f65 73747561 72792e64 65762f66| ...estuary.dev/f 00000360
|6f6f120b 6c616265 6c2d7661 6c75650a| oo..label-value. 00000370
|1e0a0f65 73747561 72792e64 65762f62| ...estuary.dev/b 00000380
|6172120b 6f746865 722d7661 6c756522| ar..other-value" 00000390
|4208e9ec 0610031a 1273333a 2f2f6275| B........s3://bu 000003a0
|636b6574 2f707265 66697822 0308ac02| cket/prefix".... 000003b0
|3207083e 1080e59a 773a1850 6174687b| 2..>....w:.Path{ 000003c0
|7b506f73 74666978 2e54656d 706c6174| {Postfix.Templat 000003d0
|657d7d30 0438cfb0 f5015a11 7b227265| e}}0.8....Z.{"re 000003e0
|6164223a 22736368 656d6122 7d1a5b0a| ad":"schema"}.[. 000003f0
|400a1e0a 0f657374 75617279 2e646576| @....estuary.dev 00000400
|2f666f6f 120b6c61 62656c2d 76616c75| /foo..label-valu 00000410
|650a1e0a 0f657374 75617279 2e646576| e....estuary.dev 00000420
|2f626172 120b6f74 6865722d 76616c75| /bar..other-valu 00000430
|6512170a 150a086d 792d6c61 62656c12| e......my-label. 00000440
|07707265 6669782f 18012001 280e3208| .prefix/.. .(.2. 00000450
|2f736875 66666c65 32042f6b 65793a18| /shuffle2./key:. 00000460
|2253454c 45435420 24736875 66666c65| "SELECT $shuffle 00000470
|2c20246b 65793b22 42137b22 6c616d62| , $key;"B.{"lamb 00000480
|6461223a 22636f6e 66696722 7d480152| da":"config"}H.R 00000490
|25646572 6976652f 612f636f 6c6c6563| %derive/a/collec 000004a0
|74696f6e 2f747261 6e73666f 726d5f6e| tion/transform_n 000004b0
|616d652e 76325a06 08cbc8d6 a6066206| ame.v2Z.......b. 000004c0
|0880888b a1066802 72117472 616e7366| ......h.r.transf 000004d0
|6f726d5f 6e616d65 2e763222 0203022a| orm_name.v2"...* 000004e0
|80010a0e 73686172 642f7465 6d706c61| ....shard/templa 000004f0
|74651a0f 7265636f 76657279 2f707265| te..recovery/pre 00000500
|66697822 0b68696e 742f7072 65666978| fix".hint/prefix 00000510
|28033202 083c4801 52400a1e 0a0f6573| (.2..<H.R@....es 00000520
|74756172 792e6465 762f666f 6f120b6c| tuary.dev/foo..l 00000530
|6162656c 2d76616c 75650a1e 0a0f6573| abel-value....es 00000540
|74756172 792e6465 762f6261 72120b6f| tuary.dev/bar..o 00000550
|74686572 2d76616c 7565608c dc0268e9| ther-value`...h. 00000560
|ec063238 0a117265 636f7665 72792f74| ..28..recovery/t 00000570
|656d706c 61746510 03222108 80804010| emplate.."!...@. 00000580
|041a1473 333a2f2f 6275636b 65742f72| ...s3://bucket/r 00000590
|65636f76 65727922 0308ac02 3a0c0890| ecovery"....:... 000005a0
|3f120568 74747073 18013a03 08a8464a| ?..https..:...FJ 000005b0
|14746573 742d6465 72697661 74696f6e| .test-derivation 000005c0
|2d73616c 745a280a 0f61636d 65436f2f| -saltZ(..acmeCo/ 000005d0
|70617373 776f7264 12152f63 72656465| password../crede 000005e0
|6e746961 6c732f70 61737377 6f72645a| ntials/passwordZ 000005f0
|150a1361 636d6543 6f2f7768 6f6c652d| ...acmeCo/whole- 00000600
|636f6e66 69676202 0801|              configb...       00000610
                                                       0000061a
