crates/proto-flow/tests/snapshots/regression__derive_request_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_catalogue(ex_derive_requests())
---
// spec
|0a150801 12117b22 73706563 223a2263| ......{"spec":"c 00000000
|6f6e6669 67227d|                     onfig"}          00000010
                                                       00000017

// validate
|12bc0908 0112157b 2276616c 69646174| .......{"validat 00000000
|65223a22 636f6e66 6967227d 1ae2030a| e":"config"}.... 00000010
|1161636d 65436f2f 636f6c6c 65637469| .acmeCo/collecti 00000020
|6f6e1a08 2f6b6579 2f6f6e65 1a082f6b| on../key/one../k 00000030
|65792f74 776f220b 2f5f6d65 74612f75| ey/two"./_meta/u 00000040
|7569642a 04747970 652a0672 6567696f| uid*.type*.regio 00000050
|6e32c001 0a092f6a 736f6e2f 70747212| n2..../json/ptr. 00000060
|07612d66 69656c64 200132a7 010a0769| .a-field .2....i 00000070
|6e746567 65720a06 73747269 6e671a2e| nteger..string.. 00000080
|1a037479 70220464 61746530 b9603a03| ..typ".date0.`:. 00000090
|656e6342 03313030 4a143138 34343637| encB.100J.184467 000000a0
|34343037 33373039 35353136 31352205| 44073709551615". 000000b0
|7469746c 652a0464 65736332 0e7b2264| title*.desc2.{"d 000000c0
|6566223a 2261756c 74227d40 014a0b08| ef":"ault"}@.J.. 000000d0
|01110000 00000040 8fc05215 080a1001| .......@..R..... 000000e0
|18142204 6e756c6c 2207696e 74656765| ..".null".intege 000000f0
|725a0b22 636f6e73 742d6f6e 65225a0b| rZ."const-one"Z. 00000100
|22636f6e 73742d74 776f2260 06680372| "const-two"`.h.r 00000110
|03747970 3a0e7b22 61636b22 3a227472| .typ:.{"ack":"tr 00000120
|7565227d 42127b22 77726974 65223a22| ue"}B.{"write":" 00000130
|73636865 6d61227d 4aa3010a 12706172| schema"}J....par 00000140
|74697469 6f6e2f74 656d706c 61746510| tition/template. 00000150
|031a400a 1e0a0f65 73747561 72792e64| ..@....estuary.d 00000160
|65762f66 6f6f120b 6c616265 6c2d7661| ev/foo..label-va 00000170
|6c75650a 1e0a0f65 73747561 72792e64| lue....estuary.d 00000180
|65762f62 6172120b 6f746865 722d7661| ev/bar..other-va 00000190
|6c756522 4208e9ec 0610031a 1273333a| lue"B........s3: 000001a0
|2f2f6275 636b6574 2f707265 66697822| //bucket/prefix" 000001b0
|0308ac02 3207083e 1080e59a 773a1850| ....2..>....w:.P 000001c0
|6174687b 7b506f73 74666978 2e54656d| ath{{Postfix.Tem 000001d0
|706c6174 657d7d30 0438cfb0 f5015a11| plate}}0.8....Z. 000001e0
|7b227265 6164223a 22736368 656d6122| {"read":"schema" 000001f0
|7d229f04 0a0b7374 61626c65 5f6e616d| }"....stable_nam 00000200
|6512e203 0a116163 6d65436f 2f636f6c| e.....acmeCo/col 00000210
|6c656374 696f6e1a 082f6b65 792f6f6e| lection../key/on 00000220
|651a082f 6b65792f 74776f22 0b2f5f6d| e../key/two"./_m 00000230
|6574612f 75756964 2a047479 70652a06| eta/uuid*.type*. 00000240
|72656769 6f6e32c0 010a092f 6a736f6e| region2..../json 00000250
|2f707472 1207612d 6669656c 64200132| /ptr..a-field .2 00000260
|a7010a07 696e7465 6765720a 06737472| ....integer..str 00000270
|696e671a 2e1a0374 79702204 64617465| ing....typ".date 00000280
|30b9603a 03656e63 42033130 304a1431| 0.`:.encB.100J.1 00000290
|38343436 37343430 37333730 39353531| 8446744073709551 000002a0
|36313522 05746974 6c652a04 64657363| 615".title*.desc 000002b0
|320e7b22 64656622 3a226175 6c74227d| 2.{"def":"ault"} 000002c0
|40014a0b 08011100 00000000 408fc052| @.J.........@..R 000002d0
|15080a10 01181422 046e756c 6c220769| .......".null".i 000002e0
|6e746567 65725a0b 22636f6e 73742d6f| ntegerZ."const-o 000002f0
|6e65225a 0b22636f 6e73742d 74776f22| ne"Z."const-two" 00000300
|60066803 72037479 703a0e7b 2261636b| `.h.r.typ:.{"ack 00000310
|223a2274 72756522 7d42127b 22777269| ":"true"}B.{"wri 00000320
|7465223a 22736368 656d6122 7d4aa301| te":"schema"}J.. 00000330
|0a127061 72746974 696f6e2f 74656d70| ..partition/temp 00000340
|6c617465 10031a40 0a1e0a0f 65737475| late...@....estu 00000350
|6172792e 6465762f 666f6f12 0b6c6162| ary.dev/foo..lab 00000360
|656c2d76 616c7565 0a1e0a0f 65737475| el-value....estu 00000370
|6172792e 6465762f 62617212 0b6f7468| ary.dev/bar..oth 00000380
|65722d76 616c7565 224208e9 ec061003| er-value"B...... 00000390
|1a127333 3a2f2f62 75636b65 742f7072| ..s3://bucket/pr 000003a0
|65666978 220308ac 02320708 3e1080e5| efix"....2..>... 000003b0
|9a773a18 50617468 7b7b506f 73746669| .w:.Path{{Postfi 000003c0
|782e5465 6d706c61 74657d7d 300438cf| x.Template}}0.8. 000003d0
|b0f5015a 117b2272 65616422 3a227363| ...Z.{"read":"sc 000003e0
|68656d61 227d1a14 7b227368 7566666c| hema"}..{"shuffl 000003f0
|65223a22 636f6e66 6967227d 22137b22| e":"config"}".{" 00000400
|6c616d62 6461223a 22636f6e 66696722| lambda":"config" 00000410
|7d28022a 02010232 1466696c 653a2f2f| }(.*...2.file:// 00000420
|2f70726f 6a656374 2f726f6f 743a320a| /project/root:2. 00000430
|182f7573 696e672f 74797065 73637269| ./using/typescri 00000440
|70742f6d 6f64756c 65121666 696c653a| pt/module..file: 00000450
|2f2f2f70 6174682f 746f2f69 6d706f72| ///path/to/impor 00000460
|744a0b30 303a3131 3a32323a 33335a28| tJ.00:11:22:33Z( 00000470
|0a0f6163 6d65436f 2f706173 73776f72| ..acmeCo/passwor 00000480
|6412152f 63726564 656e7469 616c732f| d../credentials/ 00000490
|70617373 776f7264 5a150a13 61636d65| passwordZ...acme 000004a0
|436f2f77 686f6c65 2d636f6e 666967|   Co/whole-config  000004b0
                                                       000004bf

// open
|1aa4040a e2030a11 61636d65 436f2f63| ........acmeCo/c 00000000
|6f6c6c65 6374696f 6e1a082f 6b65792f| ollection../key/ 00000010
|6f6e651a 082f6b65 792f7477 6f220b2f| one../key/two"./ 00000020
|5f6d6574 612f7575 69642a04 74797065| _meta/uuid*.type 00000030
|2a067265 67696f6e 32c0010a 092f6a73| *.region2..../js 00000040
|6f6e2f70 74721207 612d6669 656c6420| on/ptr..a-field  00000050
|0132a701 0a07696e 74656765 720a0673| .2....integer..s 00000060
|7472696e 671a2e1a 03747970 22046461| tring....typ".da 00000070
|746530b9 603a0365 6e634203 3130304a| te0.`:.encB.100J 00000080
|14313834 34363734 34303733 37303935| .184467440737095 00000090
|35313631 35220574 69746c65 2a046465| 51615".title*.de 000000a0
|7363320e 7b226465 66223a22 61756c74| sc2.{"def":"ault 000000b0
|227d4001 4a0b0801 11000000 0000408f| "}@.J.........@. 000000c0
|c0521508 0a100118 1422046e 756c6c22| .R.......".null" 000000d0
|07696e74 65676572 5a0b2263 6f6e7374| .integerZ."const 000000e0
|2d6f6e65 225a0b22 636f6e73 742d7477| -one"Z."const-tw 000000f0
|6f226006 68037203 7479703a 0e7b2261| o"`.h.r.typ:.{"a 00000100
|636b223a 22747275 65227d42 127b2277| ck":"true"}B.{"w 00000110
|72697465 223a2273 6368656d 61227d4a| rite":"schema"}J 00000120
|a3010a12 70617274 6974696f 6e2f7465| ....partition/te 00000130
|6d706c61 74651003 1a400a1e 0a0f6573| mplate...@....es 00000140
|74756172 792e6465 762f666f 6f120b6c| tuary.dev/foo..l 00000150
|6162656c 2d76616c 75650a1e 0a0f6573| abel-value....es 00000160
|74756172 792e6465 762f6261 72120b6f| tuary.dev/bar..o 00000170
|74686572 2d76616c 75652242 08e9ec06| ther-value"B.... 00000180
|10031a12 73333a2f 2f627563 6b65742f| ....s3://bucket/ 00000190
|70726566 69782203 08ac0232 07083e10| prefix"....2..>. 000001a0
|80e59a77 3a185061 74687b7b 506f7374| ...w:.Path{{Post 000001b0
|6669782e 54656d70 6c617465 7d7d3004| fix.Template}}0. 000001c0
|38cfb0f5 015a117b 22726561 64223a22| 8....Z.{"read":" 000001d0
|73636865 6d61227d 120b3131 3a32323a| schema"}..11:22: 000001e0
|33333a34 341a1415 33221100 1d776655| 33:44...3"...wfU 000001f0
|4425bbaa 99882dff eeddcc2a 1a7b2263| D%....-....*.{"c 00000200
|6f6e6e65 63746f72 223a7b22 73746174| onnector":{"stat 00000210
|65223a34 327d7d|                     e":42}}          00000220
                                                       00000227

// read
|223e0802 121209d2 04000000 00000011| ">.............. 00000000
|2e160000 00000000 1a160a09 5b747275| ............[tru 00000010
|652c3332 5d120456 4b1e0918 85c39f15| e,32]..VK....... 00000020
|220e7b22 72656164 223a2264 6f63227d| ".{"read":"doc"} 00000030
                                                       00000040

// flush
|2a120a10 5b7b2266 6c757368 223a7472| *...[{"flush":tr 00000000
|75657d5d|                            ue}]             00000010
                                                       00000014

// start_commit
|32660a64 0a4a0a15 612f7265 61642f6a| 2f.d.J..a/read/j 00000000
|6f75726e 616c3b73 75666669 78123108| ournal;suffix.1. 00000010
|b9601215 0a050309 08050712 0c09e321| .`.............! 00000020
|00000000 000010d7 0812150a 05070c66| ...............f 00000030
|2b1d120c 09350100 00000000 0010ae11| +....5.......... 00000040
|12160a0e 616e2f61 636b2f6a 6f75726e| ....an/ack/journ 00000050
|616c1204 03040205|                   al......         00000060
                                                       00000068

// reset
|3a00|                                :.               00000000
                                                       00000002

// internal
|a2060612 02486918 01|                .....Hi..        00000000
                                                       00000009
