crates/proto-flow/tests/snapshots/regression__derive_response_json.snap
---
source: crates/proto-flow/tests/regression.rs
expression: json_catalogue(ex_derive_responses())
---
// spec
{
  "spec": {
    "protocol": 3032023,
    "configSchema": {"config":"schema"},
    "resourceConfigSchema": {"lambda":"schema"},
    "documentationUrl": "https://example/docs",
    "oauth2": {
      "provider": "oauth-provider",
      "authUrlTemplate": "https://auth-url",
      "accessTokenUrlTemplate": "https://access-token",
      "accessTokenMethod": "POST",
      "accessTokenBody": "foo",
      "accessTokenHeaders": {
        "hdr-one": {"hello":"hdr"},
        "hdr-two": 42.5
      },
      "accessTokenResponseMap": {
        "foo": true,
        "key": "value"
      },
      "refreshTokenUrlTemplate": "https://refresh-token",
      "refreshTokenMethod": "POST",
      "refreshTokenBody": "refresh!",
      "refreshTokenHeaders": {
        "hdr-three": {"refresh":"hdr"}
      },
      "refreshTokenResponseMap": {
        "access": "here"
      }
    }
  }
}

// validated
{
  "validated": {
    "transforms": [
      {
        "readOnly": true
      },
      {}
    ],
    "generatedFiles": {
      "file:///project/root/deno.json": "content"
    }
  }
}

// opened
{
  "opened": {
    "runtimeCheckpoint": {
      "sources": {
        "a/read/journal;suffix": {
          "readThrough": "12345",
          "producers": [
            {
              "id": "AwkIBQc=",
              "state": {
                "lastAck": "8675",
                "begin": "1111"
              }
            },
            {
              "id": "BwxmKx0=",
              "state": {
                "lastAck": "309",
                "begin": "2222"
              }
            }
          ]
        }
      },
      "ackIntents": {
        "an/ack/journal": "AwQCBQ=="
      }
    }
  }
}

// published
{
  "published": {
    "doc": {"published":"doc"}
  }
}

// flushed
{
  "flushed": {
    "more": true
  }
}

// started_commit
{
  "startedCommit": {
    "state": {
      "updated": {"state":"update"},
      "mergePatch": true
    }
  }
}

// internal
{
  "$internal": "EgJIaRgB"
}
